add html code for head and link to stylesheet

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Database for all abbreviations used in aviation">
+    <meta name="keywords" content="aviation, abbreviations, aerospace, airplanes">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <title>Aviation Abbreviations</title>
+    
 </head>
 <body>
     
