--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
             <h1 id="logo">Aviation Abbreviations</h1>
         </a>
         
-
         <nav>
+            <ul id="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Abbreviations</a></li>
+                <li><a href="#">Mnemonics</a></li>
+                <li><a href="#">Acronyms</a></li>
+            </ul>
 
         </nav>
+
     </header>
 </body>
 
