--- a/index.html
+++ b/index.html
@@ -11,14 +11,21 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Aviation Abbreviations</title>
+
+    <script src="https://kit.fontawesome.com/ca2cfe0f86.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
     <header>
 
         <a href="index.html">
-            <h1 id="logo">Aviation Abbreviations</h1>
+            <h1 id="logo"><i class="fa-solid fa-plane"></i> Aviation <i class="fa-solid fa-helicopter"></i> Abbreviations</h1>
         </a>
+
+        <div class="header-background-image">
+            <img src="" alt="">
+        </div>
         
         <nav>
             <ul id="menu">
