add active and hover classes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header id="header-dimensions">
+    <header id="header-properties">
 
         <div id="logo-block">
         <a href="index.html">
@@ -31,7 +31,7 @@
         <div id="menu-block">
         <nav>
             <ul id="menu">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="#">Abbreviations</a></li>
                 <li><a href="#">Mnemonics</a></li>
                 <li><a href="#">Acronyms</a></li>
