--- a/list.html
+++ b/list.html
@@ -30,8 +30,7 @@
             
             <nav>
                 <ul class="menu">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="#search">Search</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="list.html" class="active">List</a></li>
                 <li><a href="#">Contact</a></li>
                 </ul>
