Add table in footer

--- a/index.html
+++ b/index.html
@@ -47,10 +47,30 @@
 
         <footer>
 
-            <div>
-                <h6 class="logo-small">Aviation Abbreviations</h6>
+            <div id="footerblock1">
+                <h4 class="logo-small">Aviation Abbreviations</h4>
+                <h6 class="under-logo-text">Making aviation more understanable</h6>
+            </div>
 
-                <h6 class="under-logo-text">Making aviation more understanable.</h6>
+            <div id="footerblock2">
+               <table>
+                   <tr>
+                       <th>Explore</th>
+                       <th>Social</th>
+                   </tr>
+                   <tr>
+                       <td><a href="index.html">Home</a></td>
+                       <td>Facebook</td>
+                   </tr>
+                   <tr>
+                       <td><a href="list.html">List</a></td>
+                       <td>Instagram</td>
+                   </tr>
+                   <tr>
+                       <td>Contact</td>
+                       <td>Twitter</td>
+                   </tr>
+               </table>
             </div>
             
             
