--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <div id="footerblock1">
                 <h4 class="logo-small">Aviation Abbreviations</h4>
-                <h6 class="under-logo-text">Making aviation more understanable</h6>
+                <h6 class="under-logo-text">Making aviation more understandable</h6>
             </div>
 
             <div id="footerblock2">
