Add contact.html and make beginning of contact form

--- a/list.html
+++ b/list.html
@@ -32,7 +32,7 @@
                 <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="list.html" class="active">List</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
             
@@ -460,11 +460,11 @@
                        <td>Facebook</td>
                    </tr>
                    <tr>
-                       <td><a href="list.html">List</a></td>
+                       <td><a href="list.html" class="active">List</a></td>
                        <td>Instagram</td>
                    </tr>
                    <tr>
-                       <td>Contact</td>
+                       <td><a href="contact.html">Contact</a></td> 
                        <td>Twitter</td>
                    </tr>
                </table>
