--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
                 The Netherlands</h4>
             </address>
 
-            <iframe id="map" src="https://www.google.com" style="height:300px;width:600px;" title="Aviation Abbreviation Location"></iframe>
+            <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2435.8485304282453!2d4.888857615670398!3d52.37316647978665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609c6c6b39919%3A0x21c54aa7ef67a48!2sNieuwezijds%20Voorburgwal%20147%2C%201012%20RJ%20Amsterdam%2C%20Netherlands!5e0!3m2!1sen!2slt!4v1654089621517!5m2!1sen!2slt"></iframe>
 
 
         </section>
