some fixes to contact form footer. still not completed but I need to go now

--- a/contact.html
+++ b/contact.html
@@ -89,25 +89,27 @@
                 <h6 class="under-logo-text">Making aviation more understandable</h6>
             </div>
 
-            <div id="footerblock2">
-               <table>
-                   <tr>
-                       <th>Explore</th>
-                       <th>Social</th>
-                   </tr>
-                   <tr>
-                       <td><a href="index.html">Home</a></td>
-                       <td>Facebook</td>
-                   </tr>
-                   <tr>
-                       <td><a href="list.html">List</a></td>
-                       <td>Instagram</td>
-                   </tr>
-                   <tr>
-                       <td><a href="contact.html" class="active">Contact</a></td> 
-                       <td>Twitter</td>
-                   </tr>
-               </table>
+            <div id="footerblock2-uniqueforcontact">
+                <div id="footerblock2">
+                    <table>
+                    <tr>
+                        <th>Explore</th>
+                         <th>Social</th>
+                    </tr>
+                    <tr>
+                        <td><a href="index.html">Home</a></td>
+                         <td>Facebook</td>
+                     </tr>
+                    <tr>
+                        <td><a href="list.html" class="active">List</a></td>
+                         <td>Instagram</td>
+                     </tr>
+                     <tr>
+                        <td><a href="contact.html">Contact</a></td> 
+                        <td>Twitter</td>
+                     </tr>
+                    </table>
+                </div>
             </div>
             
             
