--- a/contact.html
+++ b/contact.html
@@ -71,10 +71,10 @@
             <div id="address-container"></div>
             <address>
                 <h2>Contact Address:</h2>
-                <h4>Aviation Abbreviations
-                Nieuwezijds Voorburgwal 147 
-                1012 RJ Amsterdam
-                The Netherlands</h4>
+                <p>Aviation Abbreviations</p>
+                <p>Voorburgwal 147</p>
+                <p>1012 RJ Amsterdam</p>
+                <p>The Netherlands</p>
             </address>
 
             <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2435.8485304282453!2d4.888857615670398!3d52.37316647978665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609c6c6b39919%3A0x21c54aa7ef67a48!2sNieuwezijds%20Voorburgwal%20147%2C%201012%20RJ%20Amsterdam%2C%20Netherlands!5e0!3m2!1sen!2slt!4v1654089621517!5m2!1sen!2slt"></iframe>
@@ -101,11 +101,11 @@
                          <td>Facebook</td>
                      </tr>
                     <tr>
-                        <td><a href="list.html" class="active">List</a></td>
+                        <td><a href="list.html">List</a></td>
                          <td>Instagram</td>
                      </tr>
                      <tr>
-                        <td><a href="contact.html">Contact</a></td> 
+                        <td><a href="contact.html" class="active">Contact</a></td> 
                         <td>Twitter</td>
                      </tr>
                     </table>
