--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             
             <nav>
                 <ul class="menu">
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="list.html">List</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
                 </ul>
