--- a/list.html
+++ b/list.html
@@ -60,6 +60,50 @@
                             <td>A/P</td>
                             <td>auto pilot</td>
                         </tr>
+                        <tr>
+                            <td>AAE</td>
+                            <td>above aerodrome elevation</td>
+                        </tr>
+                        <tr>
+                            <td>ACARS</td>
+                            <td>aircraft communication and addressing reporting system</td>
+                        </tr>
+                        <tr>
+                            <td>ACAS</td>
+                            <td>airborne collision avoidance system</td>
+                        </tr>
+                        <tr>
+                            <td>ACFT</td>
+                            <td>aircraft</td>
+                        </tr>
+                        <tr>
+                            <td>AD</td>
+                            <td>airworthiness directive</td>
+                        </tr>
+                        <tr>
+                            <td>ADC</td>
+                            <td>air data computer</td>
+                        </tr>
+                        <tr>
+                            <td>ADF</td>
+                            <td>automatic direction finder</td>
+                        </tr>
+                        <tr>
+                            <td>ADI</td>
+                            <td>attitude director indicator</td>
+                        </tr>
+                        <tr>
+                            <td>ADS</td>
+                            <td>air data system</td>
+                        </tr>
+                        <tr>
+                            <td>AFCS</td>
+                            <td>automatic flight control system</td>
+                        </tr>
+                        <tr>
+                            <td>AFM</td>
+                            <td>aircraft flight manual</td>
+                        </tr>
                     </table>
                 </div>
                 <br>
@@ -108,6 +152,14 @@
                             <th></th>
                         </tr>
                         <tr>
+                            <td>DA/h</td>
+                            <td>decision altitude / height </td>
+                        </tr>
+                        <tr>
+                            <td>DL</td>
+                            <td>datalink</td>
+                        </tr>
+                        <tr>
                             <td></td>
                             <td></td>
                         </tr>
@@ -122,8 +174,56 @@
                             <th></th>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>EAS</td>
+                            <td>equivalent airspeed</td>
+                        </tr>
+                        <tr>
+                            <td>EASA</td>
+                            <td>European aviation safety agency</td>
+                        </tr>
+                        <tr>
+                            <td>ECAM</td>
+                            <td>electronic centralised aircraft monitor</td>
+                        </tr>
+                        <tr>
+                            <td>ECU</td>
+                            <td>engine control unit</td>
+                        </tr>
+                        <tr>
+                            <td>EET</td>
+                            <td>estimated elapsed time</td>
+                        </tr>
+                        <tr>
+                            <td>EFB</td>
+                            <td>electronic flight bag</td>
+                        </tr>
+                        <tr>
+                            <td>EFD</td>
+                            <td>electronic flight display</td>
+                        </tr>
+                        <tr>
+                            <td>EFIS</td>
+                            <td>electronic flight instrument system</td>
+                        </tr>
+                        <tr>
+                            <td>EFP</td>
+                            <td>engine failure procedure</td>
+                        </tr>
+                        <tr>
+                            <td>EGPWS</td>
+                            <td>enhanced ground proximity warning system</td>
+                        </tr>
+                        <tr>
+                            <td>EGT</td>
+                            <td>exhaust gas temperature</td>
+                        </tr>
+                        <tr>
+                            <td>EICAS</td>
+                            <td>engine indicating and crew alerting system</td>
+                        </tr>
+                        <tr>
+                            <td>ELT</td>
+                            <td>emergency locator transmitter</td>
                         </tr>
                     </table>
                 </div>
@@ -136,8 +236,52 @@
                             <th></th>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>FAA</td>
+                            <td>federal aviation administration</td>
+                        </tr>
+                        <tr>
+                            <td>FAC</td>
+                            <td>final approach course</td>
+                        </tr>
+                        <tr>
+                            <td>FADEC</td>
+                            <td>full authority digital engine control</td>
+                        </tr>
+                        <tr>
+                            <td>FAF</td>
+                            <td>final approach fix</td>
+                        </tr>
+                        <tr>
+                            <td>FAP</td>
+                            <td>final approach point</td>
+                        </tr>
+                        <tr>
+                            <td>FAS</td>
+                            <td>final approach segment</td>
+                        </tr>
+                        <tr>
+                            <td>FBW</td>
+                            <td>fly by wire</td>
+                        </tr>
+                        <tr>
+                            <td>FCC</td>
+                            <td>flight control computer</td>
+                        </tr>
+                        <tr>
+                            <td>FC</td>
+                            <td>flight crew</td>
+                        </tr>
+                        <tr>
+                            <td>FCOM</td>
+                            <td>flight crew operating manual</td>
+                        </tr>
+                        <tr>
+                            <td>FCU</td>
+                            <td>fuel control unit</td>
+                        </tr>
+                        <tr>
+                            <td>FD</td>
+                            <td>flight director</td>
                         </tr>
                     </table>
                 </div>
@@ -150,8 +294,52 @@
                             <th></th>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>GA</td>
+                            <td>general aviation</td>
+                        </tr>
+                        <tr>
+                            <td>G/A</td>
+                            <td>go around</td>
+                        </tr>
+                        <tr>
+                            <td>GHz</td>
+                            <td>gigahertz</td>
+                        </tr>
+                        <tr>
+                            <td>GLONASS</td>
+                            <td>global navigation satellite system</td>
+                        </tr>
+                        <tr>
+                            <td>GMT</td>
+                            <td>Greenwich mean time</td>
+                        </tr>
+                        <tr>
+                            <td>GND</td>
+                            <td>ground</td>
+                        </tr>
+                        <tr>
+                            <td>GP</td>
+                            <td>glide path</td>
+                        </tr>
+                        <tr>
+                            <td>GPS</td>
+                            <td>global positioning system</td>
+                        </tr>
+                        <tr>
+                            <td>GPU</td>
+                            <td>ground power unit</td>
+                        </tr>
+                        <tr>
+                            <td>GPWS</td>
+                            <td>ground proximity warning system</td>
+                        </tr>
+                        <tr>
+                            <td>G/S</td>
+                            <td>glideslope</td>
+                        </tr>
+                        <tr>
+                            <td>GS</td>
+                            <td>groundspeed</td>
                         </tr>
                     </table>
                 </div>
@@ -164,8 +352,60 @@
                             <th></th>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>H</td>
+                            <td>heavy</td>
+                        </tr>
+                        <tr>
+                            <td>HAA</td>
+                            <td>height above airport</td>
+                        </tr>
+                        <tr>
+                            <td>HDG</td>
+                            <td>heading</td>
+                        </tr>
+                        <tr>
+                            <td>HDI</td>
+                            <td>horizontal deviation indicator</td>
+                        </tr>
+                        <tr>
+                            <td>HF</td>
+                            <td>high frequency</td>
+                        </tr>
+                        <tr>
+                            <td>Hg</td>
+                            <td>inch of mercury</td>
+                        </tr>
+                        <tr>
+                            <td>HIRL</td>
+                            <td>high intensity runway lighting</td>
+                        </tr>
+                        <tr>
+                            <td>HLD</td>
+                            <td>hold</td>
+                        </tr>
+                        <tr>
+                            <td>HSI</td>
+                            <td>horizontal situation indicator</td>
+                        </tr>
+                        <tr>
+                            <td>HSL</td>
+                            <td>heading select</td>
+                        </tr>
+                        <tr>
+                            <td>HUD</td>
+                            <td>head-up display</td>
+                        </tr>
+                        <tr>
+                            <td>HW</td>
+                            <td>headwind</td>
+                        </tr>
+                        <tr>
+                            <td>HYD</td>
+                            <td>hydraulic</td>
+                        </tr>
+                        <tr>
+                            <td>Hz</td>
+                            <td>hertz</td>
                         </tr>
                     </table>
                 </div>
@@ -176,6 +416,38 @@
                         <tr>
                             <th>I</th>
                             <th></th>
+                        </tr>
+                        <tr>
+                            <td>IAF</td>
+                            <td>initial approach fix</td>
+                        </tr>
+                        <tr>
+                            <td>IAP</td>
+                            <td>instrument approach procedure</td>
+                        </tr>
+                        <tr>
+                            <td>IAS</td>
+                            <td>indicated airspeed</td>
+                        </tr>
+                        <tr>
+                            <td>IATA</td>
+                            <td>international air transport association</td>
+                        </tr>
+                        <tr>
+                            <td>ICAO</td>
+                            <td>international civil aviation organization</td>
+                        </tr>
+                        <tr>
+                            <td>IDENT</td>
+                            <td>identifier</td>
+                        </tr>
+                        <tr>
+                            <td>IDG</td>
+                            <td>integrated drive generator</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td></td>
