social media links work now and add some more list items

--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
                    </tr>
                    <tr>
                        <td><a href="index.html" class="active">Home</a></td>
-                       <td>Facebook</td>
+                       <td><a href="https://www.facebook.com/johanvanerkel/" target="_blank">Facebook</a></td> 
                    </tr>
                    <tr>
                        <td><a href="list.html">List</a></td>
-                       <td>Instagram</td>
+                       <td><a href="https://www.instagram.com/jve89/" target="_blank">Instagram</a></td>
                    </tr>
                    <tr>
                        <td><a href="contact.html">Contact</a></td> 
-                       <td>Twitter</td>
+                       <td><a href="https://twitter.com/jve898" target="_blank">Twitter</a></td>
                    </tr>
                </table>
             </div>
