--- a/list.html
+++ b/list.html
@@ -446,12 +446,16 @@
                             <td>integrated drive generator</td>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>IF</td>
+                            <td>intermediate approach fix</td>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>IFR</td>
+                            <td>instrument flight rules</td>
+                        </tr>
+                        <tr>
+                            <td>ILS</td>
+                            <td>instrument landing system</td>
                         </tr>
                     </table>
                 </div>
@@ -464,8 +468,8 @@
                             <th></th>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>JAA</td>
+                            <td>joint aviation authorities</td>
                         </tr>
                     </table>
                 </div>
@@ -478,8 +482,20 @@
                             <th></th>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>KCAS</td>
+                            <td>knots calibrated airspeed</td>
+                        </tr>
+                        <tr>
+                            <td>KIAS</td>
+                            <td>knots indicated airspeed</td>
+                        </tr>
+                        <tr>
+                            <td>KRE</td>
+                            <td>key risk element</td>
+                        </tr>
+                        <tr>
+                            <td>KTAS</td>
+                            <td>knots true airspeed</td>
                         </tr>
                     </table>
                 </div>
@@ -492,8 +508,48 @@
                             <th></th>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>LAME</td>
+                            <td>licensed aircraft maintenace engineer</td>
+                        </tr>
+                        <tr>
+                            <td>LCC</td>
+                            <td>low cost carrier</td>
+                        </tr>
+                        <tr>
+                            <td>LDA</td>
+                            <td>landing distance available</td>
+                        </tr>
+                        <tr>
+                            <td>LDR</td>
+                            <td>landing distance required</td>
+                        </tr>
+                        <tr>
+                            <td>LIR</td>
+                            <td>loading instruction report</td>
+                        </tr>
+                        <tr>
+                            <td>LNAV</td>
+                            <td>lateral navigation</td>
+                        </tr>
+                        <tr>
+                            <td>LOC</td>
+                            <td>localizer</td>
+                        </tr>
+                        <tr>
+                            <td>LOM</td>
+                            <td>locator outer marker</td>
+                        </tr>
+                        <tr>
+                            <td>LORAN</td>
+                            <td>long range navigation</td>
+                        </tr>
+                        <tr>
+                            <td>LPC</td>
+                            <td>low pressure compressor</td>
+                        </tr>
+                        <tr>
+                            <td>LPT</td>
+                            <td>low pressure turbine</td>
                         </tr>
                     </table>
                 </div>
@@ -506,8 +562,112 @@
                             <th></th>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>MAC</td>
+                            <td>mean aerodynamic chord</td>
+                        </tr>
+                        <tr>
+                            <td>MAP</td>
+                            <td>manifold absolute pressure</td>
+                        </tr>
+                        <tr>
+                            <td>MAPt</td>
+                            <td>missed approach point</td>
+                        </tr>
+                        <tr>
+                            <td>MB</td>
+                            <td>marker beacon</td>
+                        </tr>
+                        <tr>
+                            <td>MCC</td>
+                            <td>multi crew cockpit</td>
+                        </tr>
+                        <tr>
+                            <td>MCDU</td>
+                            <td>multifunction control display unit</td>
+                        </tr>
+                        <tr>
+                            <td>MCP</td>
+                            <td>mode control panel</td>
+                        </tr>
+                        <tr>
+                            <td>MCT</td>
+                            <td>maximum continuous thrust</td>
+                        </tr>
+                        <tr>
+                            <td>MDA</td>
+                            <td>minimum descent altitude</td>
+                        </tr>
+                        <tr>
+                            <td>MDH</td>
+                            <td>minimum descent height</td>
+                        </tr>
+                        <tr>
+                            <td>MEA</td>
+                            <td>minimum en-route altitude</td>
+                        </tr>
+                        <tr>
+                            <td>MEL</td>
+                            <td>minimum equipment list</td>
+                        </tr>
+                        <tr>
+                            <td>MEP</td>
+                            <td>multi-engine piston</td>
+                        </tr>
+                        <tr>
+                            <td>METAR</td>
+                            <td>meteorological aerodrome report</td>
+                        </tr>
+                        <tr>
+                            <td>MF</td>
+                            <td>medium frequency</td>
+                        </tr>
+                        <tr>
+                            <td>MD</td>
+                            <td>multi-function display</td>
+                        </tr>
+                        <tr>
+                            <td>MFRA</td>
+                            <td>minimum flap retraction altitude</td>
+                        </tr>
+                        <tr>
+                            <td>MH</td>
+                            <td>magnetic heading</td>
+                        </tr>
+                        <tr>
+                            <td>MIC</td>
+                            <td>microphone</td>
+                        </tr>
+                        <tr>
+                            <td>MKR</td>
+                            <td>marker beacon</td>
+                        </tr>
+                        <tr>
+                            <td>MLG</td>
+                            <td>main landing gear</td>
+                        </tr>
+                        <tr>
+                            <td>MM</td>
+                            <td>middle marker</td>
+                        </tr>
+                        <tr>
+                            <td>MLW</td>
+                            <td>maximum landing weight</td>
+                        </tr>
+                        <tr>
+                            <td>MNPS</td>
+                            <td>minimum navigation performance specifications</td>
+                        </tr>
+                        <tr>
+                            <td>MOCA</td>
+                            <td>minimum obstacle clearance altitude</td>
+                        </tr>
+                        <tr>
+                            <td>MORA</td>
+                            <td>minimum off-route altitude</td>
+                        </tr>
+                        <tr>
+                            <td>MP</td>
+                            <td>manifold pressure</td>
                         </tr>
                     </table>
                 </div>
@@ -729,15 +889,15 @@
                    </tr>
                    <tr>
                        <td><a href="index.html">Home</a></td>
-                       <td>Facebook</td>
+                       <td><a href="https://www.facebook.com/johanvanerkel/" target="_blank">Facebook</a></td> 
                    </tr>
                    <tr>
                        <td><a href="list.html" class="active">List</a></td>
-                       <td>Instagram</td>
+                       <td><a href="https://www.instagram.com/jve89/" target="_blank">Instagram</a></td>
                    </tr>
                    <tr>
                        <td><a href="contact.html">Contact</a></td> 
-                       <td>Twitter</td>
+                       <td><a href="https://twitter.com/jve898" target="_blank">Twitter</a></td>
                    </tr>
                </table>
             </div>
