add more items to list and improve some of the css code

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <section>
 
-            <div id="main-photo"></div>
+            <a href="list.html"><div id="main-photo"></div></a>
 
             
         </section>
