--- a/list.html
+++ b/list.html
@@ -680,8 +680,44 @@
                             <th></th>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>NADP</td>
+                            <td>noise abatement departure procedure</td>
+                        </tr>
+                        <tr>
+                            <td>NAVAID</td>
+                            <td>navigational aid</td>
+                        </tr>
+                        <tr>
+                            <td>ND</td>
+                            <td>navigation display</td>
+                        </tr>
+                        <tr>
+                            <td>NDB</td>
+                            <td>non-directional beacon</td>
+                        </tr>
+                        <tr>
+                            <td>NM</td>
+                            <td>nautical mile</td>
+                        </tr>
+                        <tr>
+                            <td>NORDO</td>
+                            <td>no radio</td>
+                        </tr>
+                        <tr>
+                            <td>NOTAM</td>
+                            <td>notice to airmen</td>
+                        </tr>
+                        <tr>
+                            <td>NPA</td>
+                            <td>non-precision approach</td>
+                        </tr>
+                        <tr>
+                            <td>N1</td>
+                            <td>low pressure rotor</td>
+                        </tr>
+                        <tr>
+                            <td>N2</td>
+                            <td>high pressure rotor</td>
                         </tr>
                     </table>
                 </div>
@@ -694,8 +730,40 @@
                             <th></th>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>OAT</td>
+                            <td>outside air temperature</td>
+                        </tr>
+                        <tr>
+                            <td>OBI</td>
+                            <td>omni-bearing indicator</td>
+                        </tr>
+                        <tr>
+                            <td>OBS</td>
+                            <td>omni-bearing selector</td>
+                        </tr>
+                        <tr>
+                            <td>OCA</td>
+                            <td>obstacle clearance altitude</td>
+                        </tr>
+                        <tr>
+                            <td>OCC</td>
+                            <td>operations control center</td>
+                        </tr>
+                        <tr>
+                            <td>OCH</td>
+                            <td>obstacle clearance height</td>
+                        </tr>
+                        <tr>
+                            <td>OM</td>
+                            <td>outer marker</td>
+                        </tr>
+                        <tr>
+                            <td>OTS</td>
+                            <td>out of service</td>
+                        </tr>
+                        <tr>
+                            <td>OW</td>
+                            <td>operational weight</td>
                         </tr>
                     </table>
                 </div>
@@ -708,8 +776,84 @@
                             <th></th>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>PA</td>
+                            <td>pressure altitude</td>
+                        </tr>
+                        <tr>
+                            <td>PANS-OPS</td>
+                            <td>procedures for air navigation services and operations</td>
+                        </tr>
+                        <tr>
+                            <td>PAPI</td>
+                            <td>precision approach path indicator</td>
+                        </tr>
+                        <tr>
+                            <td>PAR</td>
+                            <td>precision approach radar</td>
+                        </tr>
+                        <tr>
+                            <td>PAX</td>
+                            <td>passenger</td>
+                        </tr>
+                        <tr>
+                            <td>PBN</td>
+                            <td>performance based navigation</td>
+                        </tr>
+                        <tr>
+                            <td>PC</td>
+                            <td>proficiency check</td>
+                        </tr>
+                        <tr>
+                            <td>PDC</td>
+                            <td>pre-departure clearance</td>
+                        </tr>
+                        <tr>
+                            <td>PF</td>
+                            <td>pilot flying</td>
+                        </tr>
+                        <tr>
+                            <td>PFD</td>
+                            <td>primary flight display</td>
+                        </tr>
+                        <tr>
+                            <td>PIC</td>
+                            <td>pilot in command</td>
+                        </tr>
+                        <tr>
+                            <td>PICUS</td>
+                            <td>pilot in command under supervision</td>
+                        </tr>
+                        <tr>
+                            <td>PIREP</td>
+                            <td>pilot report</td>
+                        </tr>
+                        <tr>
+                            <td>PM</td>
+                            <td>pilot monitoring</td>
+                        </tr>
+                        <tr>
+                            <td>PND</td>
+                            <td>primary navigation display</td>
+                        </tr>
+                        <tr>
+                            <td>PNF</td>
+                            <td>pilot not flying</td>
+                        </tr>
+                        <tr>
+                            <td>PNR</td>
+                            <td>point of no return</td>
+                        </tr>
+                        <tr>
+                            <td>POB</td>
+                            <td>persons on board</td>
+                        </tr>
+                        <tr>
+                            <td>POS</td>
+                            <td>position</td>
+                        </tr>
+                        <tr>
+                            <td>PPL</td>
+                            <td>private pilot license</td>
                         </tr>
                     </table>
                 </div>
@@ -722,8 +866,20 @@
                             <th></th>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>QFE</td>
+                            <td>atmospheric pressure at aerodrome elevation</td>
+                        </tr>
+                        <tr>
+                            <td>QNE</td>
+                            <td>atmospheric pressure in standard atmosphere</td>
+                        </tr>
+                        <tr>
+                            <td>QNH</td>
+                            <td>atmospheric pressure above mean sea level</td>
+                        </tr>
+                        <tr>
+                            <td>QRH</td>
+                            <td>quick reference handbook</td>
                         </tr>
                     </table>
                 </div>
