morestyline of responsive design. still not finished

--- a/index.html
+++ b/index.html
@@ -49,27 +49,31 @@
         <footer>
 
             <div id="footerblock1">
-                <h4 class="logo-small">Aviation Abbreviations</h4>
-                <h6 class="under-logo-text">Making aviation more understandable</h6>
+               <div class="logo-small"> <h4>Aviation Abbreviations</h4> </div>
+               <div class="under-logo-text"> <h6>Making aviation more understandable</h6> </div>
             </div>
 
             <div id="footerblock2">
                <table>
                    <tr>
-                       <th>Explore</th>
-                       <th>Social</th>
+                       <th width="20%">Explore</th>
+                       <th width="20%">Social</th>
+                       <th width="60%"></th>
                    </tr>
                    <tr>
                        <td><a href="index.html" class="active">Home</a></td>
                        <td><a href="https://www.facebook.com/johanvanerkel/" target="_blank">Facebook</a></td> 
+                       <td></td>
                    </tr>
                    <tr>
                        <td><a href="list.html">List</a></td>
                        <td><a href="https://www.instagram.com/jve89/" target="_blank">Instagram</a></td>
+                       <td></td>
                    </tr>
                    <tr>
                        <td><a href="contact.html">Contact</a></td> 
                        <td><a href="https://twitter.com/jve898" target="_blank">Twitter</a></td>
+                       <td></td>
                    </tr>
                </table>
             </div>
