finished responsive design

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <div id="footerblock2">
                <table>
                    <tr>
-                       <th width="20%">Explore</th>
-                       <th width="20%">Social</th>
-                       <th width="60%"></th>
+                       <th width="50px">Explore</th>
+                       <th width="50px">Social</th>
+                       <th width="50px"></th>
                    </tr>
                    <tr>
                        <td><a href="index.html" class="active">Home</a></td>
