worked on readme and did some debugging

--- a/index.html
+++ b/index.html
@@ -39,12 +39,16 @@
             
         </header>
 
-        <section>
+        <heading>
 
-            <a href="list.html"><div id="main-photo"></div></a>
+           <div>
+               <a href="list.html">
+                   <div id="main-photo"></div>
+               </a>
+            </div>
 
             
-        </section>
+        </heading>
 
         <footer>
 
