--- a/contact.html
+++ b/contact.html
@@ -96,9 +96,9 @@
             <div id="footerblock2">
                <table>
                    <tr>
-                       <th width="50px">Explore</th>
-                       <th width="50px">Social</th>
-                       <th width="50px"></th>
+                       <th>Explore</th>
+                       <th>Social</th>
+                       <th></th>
                    </tr>
                    <tr>
                        <td><a href="index.html">Home</a></td>
