--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             
         </header>
 
-        <heading>
+        <section>
 
            <div>
                <a href="list.html">
@@ -48,7 +48,7 @@
             </div>
 
             
-        </heading>
+        </section>
 
         <footer>
 
@@ -60,9 +60,9 @@
             <div id="footerblock2">
                <table>
                    <tr>
-                       <th width="50px">Explore</th>
-                       <th width="50px">Social</th>
-                       <th width="50px"></th>
+                       <th>Explore</th>
+                       <th>Social</th>
+                       <th></th>
                    </tr>
                    <tr>
                        <td><a href="index.html" class="active">Home</a></td>
