proceeded with readme

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         
 
-        <a href="list.html"><div id="main-photo"></div></a>
+        <a href="list.html"><span id="main-photo"></span></a>
 
     
 
