Adding lighthouse testing to README

--- a/contact.html
+++ b/contact.html
@@ -26,37 +26,32 @@
                 </ul>
             </nav>
         </header>
-        <section>
-            <div class="contact-container">
-                <form action="mailto:johanvanerkel@hotmail.com" method="post" enctype="text/plain"
-                    name=”EmailForm”>
-                    <h3 id="contact-header">Contact Form</h3>
-                    <label for="fname">First Name</label>
-                    <input type="text" id="fname" name="firstname" required>
-                    <label for="lname">Last Name</label>
-                    <input type="text" id="lname" name="lastname" required>
-                    <label for="National">Nationality</label>
-                    <input type="text" id="national" name="Nationality" required>
-                    <label for="subject">Subject</label>
-                    <textarea id="subject" name="subject" placeholder="Write your matter here.."
-                        style="height:200px"></textarea>
-                    <input type="submit" value="Submit">
-                </form>
-            </div>
-        </section>
-        <section>
-            <div id="address-container">
-                <address>
-                    <p id="address-header">Contact Address:</p>
-                    <p>Aviation Abbreviations</p>
-                    <p>Voorburgwal 147</p>
-                    <p>1012 RJ Amsterdam</p>
-                    <p>The Netherlands</p>
-                </address>
-                <iframe id="map"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2435.8485304282453!2d4.888857615670398!3d52.37316647978665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609c6c6b39919%3A0x21c54aa7ef67a48!2sNieuwezijds%20Voorburgwal%20147%2C%201012%20RJ%20Amsterdam%2C%20Netherlands!5e0!3m2!1sen!2slt!4v1654089621517!5m2!1sen!2slt"></iframe>
-            </div>
-        </section>
+        <div class="contact-container">
+            <form action="mailto:johanvanerkel@hotmail.com" method="post" enctype="text/plain" name=”EmailForm”>
+                <h3 id="contact-header">Contact Form</h3>
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" required>
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname" required>
+                <label for="nationality">Nationality</label>
+                <input type="text" id="nationality" name="Nationality" required>
+                <label for="subject">Subject</label>
+                <textarea id="subject" name="subject" placeholder="Write your matter here.."
+                    style="height:200px"></textarea>
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+        <div id="address-container">
+            <address>
+                <p id="address-header">Contact Address:</p>
+                <p>Aviation Abbreviations</p>
+                <p>Voorburgwal 147</p>
+                <p>1012 RJ Amsterdam</p>
+                <p>The Netherlands</p>
+            </address>
+            <iframe id="map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2435.8485304282453!2d4.888857615670398!3d52.37316647978665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609c6c6b39919%3A0x21c54aa7ef67a48!2sNieuwezijds%20Voorburgwal%20147%2C%201012%20RJ%20Amsterdam%2C%20Netherlands!5e0!3m2!1sen!2slt!4v1654089621517!5m2!1sen!2slt"></iframe>
+        </div>
         <footer>
             <div id="footerblock1">
                 <div class="logo-small">
